@@ -118,35 +118,6 @@ void OpenSGNav::preFrame()
 /** Initialize GL state. Hold over from regular OGL apps */
 void OpenSGNav::initGLState()
 {
-   GLfloat light0_ambient[]  = { 0.1f,  0.1f,  0.1f, 1.0f };
-   GLfloat light0_diffuse[]  = { 0.7f,  0.7f,  0.7f, 1.0f };
-   GLfloat light0_specular[] = { 1.0f,  1.0f,  1.0f, 1.0f };
-   GLfloat light0_position[] = { 0.5f, 0.75f, 0.75f, 0.0f };
-
-   GLfloat mat_ambient[]   = { 0.7f, 0.7f, 0.7f, 1.0f };
-   GLfloat mat_diffuse[]   = { 1.0f, 0.5f, 0.8f, 1.0f };
-   GLfloat mat_specular[]  = { 1.0f, 1.0f, 1.0f, 1.0f };
-   GLfloat mat_shininess[] = { 50.0f };
-//   GLfloat mat_emission[]  = { 1.0f, 1.0f, 1.0f, 1.0f };
-   GLfloat no_mat[]        = { 0.0f, 0.0f, 0.0f, 1.0f };
-
-   glLightfv(GL_LIGHT0, GL_AMBIENT, light0_ambient);
-   glLightfv(GL_LIGHT0, GL_DIFFUSE, light0_diffuse);
-   glLightfv(GL_LIGHT0, GL_SPECULAR, light0_specular);
-   glLightfv(GL_LIGHT0, GL_POSITION, light0_position);
-
-   glMaterialfv(GL_FRONT, GL_AMBIENT, mat_ambient);
-   glMaterialfv(GL_FRONT, GL_DIFFUSE, mat_diffuse);
-   glMaterialfv(GL_FRONT, GL_SPECULAR, mat_specular);
-   glMaterialfv(GL_FRONT, GL_SHININESS, mat_shininess);
-   glMaterialfv(GL_FRONT, GL_EMISSION, no_mat);
-
-   glEnable(GL_DEPTH_TEST);
-   glEnable(GL_LIGHTING);
-   glEnable(GL_LIGHT0);
-   glEnable(GL_COLOR_MATERIAL);
-   glShadeModel(GL_SMOOTH);
-
    // OpenSG does not handle this yet, being smart about it is not
    // that trivial...
    glEnable(GL_NORMALIZE);
